		Timetable: fixed typo in class edit view
		Timetable Admin: removed Left users from exception add screen
		Timetable Admin: narrowed down class participant count in Course edit view to users with status Full
		Timetable Admin: added search and filters to course enrolment and course management pages
		Timetable Admin: added bulk action to copy selected students to another class
		User Admin: fixed PHP Notice issue in user import
		User Admin: tweaked link to family from Manage Users to fix year group no-show issue
		User Admin: fixed PHP Notice issue in student enrolment import
		User Admin: fixed mime-type issue in user image import function
		User Admin: added student ID to search in Manage Users

	Deprecated
		Planner: replaced original planner-based attendance with attendance by class

v12.0.00
--------
	Headlines
		New markbook configuration to allow weighting and total score calculation for all suitable columns in class
		New interface for defining interface string substitutions, along for custom language tweaks
		PHP 7 compatible
		Dashboards, with hooks, for staff and students
		New workflows for advertising job openings, accepting and processing applications
		Complete Dutch translation ("dank je" to Vic Mortelmans and Kris Clauw)

	Changes With Important Notices
		System: initial phase of object oriented PHP rewrite: expect errors during upload of the update.
		Students: moved student application form from its own module into Students
		Students: moved application form management from User Admin to Students module
		Students: moved student enrolment from User Admin to Students module
		Students: moved medical form management from User Admin to Students module

	Significant Changes
		System: replaced float with version_compare, fixing cases where minor (system and module) updates could not be installed.
		System: improved return message handling
		System: link to Edit shown to user after new record is added